--- a/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
+++ b/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="EventHubName" value="***ENTER YOUR EVENT HUB NAME***"/>
-    <add key="Microsoft.ServiceBus.ConnectionString" value="***ENTER YOUR KEY***"/>
+    <add key="EventHubName" value="jetb-phoneanalysis-ehn.servicebus.windows.net"/>
+    <add key="Microsoft.ServiceBus.ConnectionString" value="d+rteiTPPeI48Yo/EKt+aLc1PrPxqzwckvf97rpl+wE="/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup>
 <system.serviceModel>
