--- a/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
+++ b/Labfiles/Starter/DP-200.6/DataGenerator/telcodatagen.exe.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="EventHubName" value="je-phoneanalysis-eh-sap"/>
+    <add key="EventHubName" value="je-phoneanalysis-eh"/>
     <add key="Microsoft.ServiceBus.ConnectionString" value="d+rteiTPPeI48Yo/EKt+aLc1PrPxqzwckvf97rpl+wE="/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup>
